style: fixed placeholder color and align

--- a/client/src/components/Textfield.module.css
+++ b/client/src/components/Textfield.module.css
@@ -12,4 +12,5 @@
 .input::placeholder {
   color: var(--placeholder-color);
   font-family: "Montserrat";
+  text-align: var(--placeholder-text-align);
 }
